<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="michal.myapplication.FlipACoin">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textViewFlipACoinResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonFlipACoin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp" />

        <TextView
            android:id="@+id/textViewFlipACoinTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewFlipACoinTail"
            android:layout_below="@+id/textViewFlipACoinTail"
            android:layout_marginTop="22dp"
            android:text="@string/FlipACoinTotal" />

        <TextView
            android:id="@+id/textViewFlipACoinTail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewFlipACoinHead"
            android:layout_below="@+id/textViewFlipACoinHead"
            android:layout_marginTop="24dp"
            android:text="@string/FlipACoinTail" />

        <TextView
            android:id="@+id/textViewFlipACoinHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/buttonFlipACoin"
            android:layout_marginStart="46dp"
            android:layout_marginTop="78dp"
            android:text="TextView"
            tools:text="@string/FlipACoinHead" />

        <Button
            android:id="@+id/buttonFlipACoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="211dp"
            android:text="@string/FlipACoinFlip" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
