<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="michal.myapplication.MorseCode">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewMorseCodeOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewInMorseCode"
            android:layout_marginTop="14dp"
            android:text="@string/MorseCodeResult"
            tools:text="@string/MorseCodeResult" />

        <TextView
            android:id="@+id/textViewInMorseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewEnterWord"
            android:layout_below="@+id/textViewEnterWord"
            android:layout_marginTop="80dp"
            android:text="@string/InMorseCode"
            tools:text="@string/InMorseCode" />

        <TextView
            android:id="@+id/textViewEnterWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/EnterWord"
            tools:text="@string/EnterWord" />

        <Button
            android:id="@+id/buttonMorseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="107dp"
            android:text="@string/MorseCodeButton"
            tools:text="@string/MorseCodeButton" />

        <EditText
            android:id="@+id/editTextMorseCodeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewEnterWord"
            android:layout_marginTop="13dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
