<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="michal.myapplication.Menu">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button3"
            android:layout_marginTop="47dp"
            android:text="Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:text="@string/MorseCode"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="153dp"
            tools:text="@string/MorseCode" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ChangeTextButton"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="-65dp"
            tools:text="@string/ChangeTextButton" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button2"
            android:layout_marginTop="43dp"
            android:layout_weight="1"
            android:text="@string/FlipACoin"
            tools:layout_editor_absoluteX="190dp"
            tools:layout_editor_absoluteY="5dp"
            tools:text="@string/FlipACoin" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
