<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="michal.myapplication.TwentyOne">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/buttonPlayerOneTake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="74dp"
            android:layout_marginEnd="11dp"
            android:onClick="onClickPlayerOneTakeCard"
            android:text="@string/TwentyOnePlayerOneTake"
            tools:text="@string/TwentyOnePlayerOneTake" />

        <Button
            android:id="@+id/buttonPlayerTwoTake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageViewPlayerTwoCard6"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:onClick="onClickPlayerTwoTakeCard"
            android:rotation="180"
            android:text="@string/TwentyOnePlayerOneTake"
            tools:text="@string/TwentyOnePlayerOneTake" />

        <Button
            android:id="@+id/buttonPlayerOneStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/buttonPlayerOneTake"
            android:layout_marginBottom="12dp"
            android:onClick="onClickPlayerOneFinishGame"
            android:text="@string/TwentyOnePlayerOneStop"
            tools:text="@string/TwentyOnePlayerOneStop" />

        <Button
            android:id="@+id/buttonPlayerTwoStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="onClickPlayerTwoFinishGame"
            android:rotation="180"
            android:text="@string/TwentyOnePlayerOneStop"
            tools:text="@string/TwentyOnePlayerOneStop" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard2"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard1"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard1" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard3"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard2"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard2" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard4"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard3"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard3" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard5"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard4"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard4" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard7"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_above="@+id/imageViewPlayerOneCard2"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard8"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_above="@+id/imageViewPlayerOneCard2"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard7" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard9"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard8"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard2" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard6"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerOneCard5"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard5" />

        <ImageView
            android:id="@+id/imageViewPlayerOneCard1"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_above="@+id/buttonPlayerOneTake"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="45dp" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard1"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_above="@+id/imageViewPlayerOneCard9"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="67dp" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard2"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerTwoCard1"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard1" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard3"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_above="@+id/imageViewPlayerTwoCard9"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard2" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard4"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerTwoCard3"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard3" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard5"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerTwoCard4"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard4" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard6"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerTwoCard5"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard5" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard7"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_alignTop="@+id/imageViewPlayerTwoCard9"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard8"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_below="@+id/imageViewPlayerTwoCard2"
            android:layout_alignStart="@+id/imageViewPlayerTwoCard2" />

        <ImageView
            android:id="@+id/imageViewPlayerTwoCard9"
            android:layout_width="102px"
            android:layout_height="138px"
            android:layout_below="@+id/imageViewPlayerTwoCard2"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard8" />

        <TextView
            android:id="@+id/textViewPlayerOneSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonPlayerOneStop"
            android:layout_toStartOf="@+id/imageViewPlayerTwoCard6"
            android:text="@string/TwentyOneSum"
            tools:text="@string/TwentyOneSum" />

        <TextView
            android:id="@+id/textViewPlayerTwoSum"
            android:rotation="180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonPlayerTwoStop"
            android:layout_toEndOf="@+id/imageViewPlayerOneCard6"
            android:text="@string/TwentyOneSum"
            tools:text="@string/TwentyOneSum" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
